test/stg/error/fun3.stg
-- Fun definition missing expression
fun = FUN(x -> );
